--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies =  [
   "typing>=3.7.4.3",
   "pandas>=2.2.3",
   "numpy>=2.1.1",
-  "sem>=0.3.9.1"
+  "sem>=0.3.9.1",
+  "torch>=2.2.0"
 ]
 
 [project.urls]
